--- a/home.css
+++ b/home.css
@@ -3,3 +3,28 @@
     height: 5%;
     background-color: orange;
 }
+
+.header{
+    
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 100%;
+    height : 130px;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+    flex-wrap: wrap;
+    
+}
+
+.first{
+    width : 200px;
+    height : 130px;
+    
+}
+
+.second{
+    width : 500px;
+    height : 130px;
+    
+}
