--- a/home.css
+++ b/home.css
@@ -34,6 +34,9 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     margin-top: 250px;
+    width : 80%;
+    height : 60%;
+    margin-left : 20%
   }
   
   /* On mouse-over, add a deeper shadow */
