--- a/home.css
+++ b/home.css
@@ -33,7 +33,7 @@
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    margin-top: 250px;
+    margin-top: 280px;
     width : 70%;
     height : 70%;
     margin-left : 15%
@@ -47,4 +47,14 @@
   /* Add some padding inside the card container */
   .container {
     padding: 2px 16px;
+  }
+
+  .button{
+    font-size: 16px;
+    text-align: center;
+    color: white;
+    border-radius: 25px;
+    border: 0.1vh solid black;
+    background-color: red;
+    padding: 5px 10px;    
   }
