--- a/home.css
+++ b/home.css
@@ -33,10 +33,13 @@
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    margin-top: 280px;
     width : 90%;
     height : 90%;
     margin-left : 5%
+  }
+
+  .div{
+    margin-top: 280px;
   }
   
   /* On mouse-over, add a deeper shadow */
