--- a/home.css
+++ b/home.css
@@ -61,3 +61,10 @@
     background-color: red;
     padding: 5px 10px;    
   }
+
+  .footer{
+    width : 100%;
+    height: 5%;
+    background-color: lightgoldenrodyellow;
+    padding : 10px
+  }
