--- a/home.css
+++ b/home.css
@@ -67,3 +67,11 @@
     background-color: lightgoldenrodyellow;
     padding : 10px
   }
+
+  .c{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    height: 30%;
+    width: 90%;
+    margin-left: 5%;
+  }
