--- a/home.css
+++ b/home.css
@@ -52,6 +52,10 @@
     padding: 2px 16px;
   }
 
+.h_text{
+  border : 1px solid red;
+}
+
   .button{
     font-size: 25px;
     text-align: center;
